--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -16,9 +16,6 @@
   <div id="changeThemeWindow"></div>
 
   <script type="text/javascript" src="../../js/require.js" data-main="../../js/main.js"></script>
-  <script type="text/x-kendo-template" id="allTheme">
-
-  </script>
   <script>
     function requireReady() {
       var title = kendo.template('<div class="logo">仓储管理系统（WMS）</div>')
@@ -29,7 +26,7 @@
       var inlineDefault = new kendo.data.HierarchicalDataSource({
         data: [
           {
-              text: '入库', items: [
+            text: '入库', items: [
               { text: "入库订单", attr: { url: './form.html' }, select: function (e) { addTab(e.target.context.innerHTML) } },
               { text: "入库计划", attr: { url: './frozen.html' }, select: function (e) { addTab(e.target.context.innerHTML) } }
             ]
@@ -37,13 +34,13 @@
           {
             text: "出库", items: [
               { text: "出库订单" },
-              { text: "出库计划"},
-              { text: "出库任务"}
+              { text: "出库计划" },
+              { text: "出库任务" }
             ]
           },
           {
             text: "库内作业", items: [
-              { text: "检验任务"},
+              { text: "检验任务" },
               { text: "库存属性变更单" },
               { text: "移动预订单" },
               { text: "移动任务" },
@@ -53,7 +50,7 @@
           },
           {
             text: "库存查询", items: [
-              { text: "库存查询"},
+              { text: "库存查询" },
               { text: "库存履历" },
               { text: "库存快照" }
             ]
@@ -72,10 +69,10 @@
           },
           {
             text: "", spriteCssClass: 'fa fa-user-circle', items: [
-              { text: "张三"},
-              { text: "仓库"},
-              { text: "货主"},
-              { text: "仓库货主切换"},
+              { text: "张三" },
+              { text: "仓库" },
+              { text: "货主" },
+              { text: "仓库货主切换" },
               { text: "密码修改" }
             ]
           },
@@ -96,8 +93,8 @@
             ]
           }
         ],
-      
-})
+
+      })
       $("#horizontalMenu").kendoMenu({
         dataSource: inlineDefault,
         scrollable: true
@@ -109,16 +106,9 @@
           width: "615px",
           height: "350px",
           title: "Change Theme",
-          actions: [
-            "Pin",
-            "Minimize",
-            "Maximize",
-            "Close"
-          ],
+          actions: ["Pin", "Minimize", "Maximize", "Close"],
           content: "./theme.html",
-          modal: {
-            preventScroll: true
-          }
+          modal: { preventScroll: true }
         });
         themeWindow.data("kendoWindow").center().open();
       }
@@ -163,7 +153,7 @@
           tabstrip.append(
             [{
               text: text,
-              contentUrl: url
+              contentUrl: url,
             }]
           )
           var tabsElements = $('#tabstrip li[role="tab"]:last-child');
