--- a/src/demo/plan.html
+++ b/src/demo/plan.html
@@ -1,4 +1,4 @@
-<div class="all-form plan">
+<div class="all-form plan" id="plan">
   <h1 class="form-title">入库计划明细</h1>
   <div id="validation-success"></div>
   <nav id="stepper"></nav>
@@ -23,9 +23,13 @@
   </div>
 </div>
 <script type="text/javascript">
+  var $el = $('#plan');
+  $el.attr('id', '');
+  var data = $el.closest('.k-content').data('content');
+  console.log(data);
   var validationSuccess = $("#validation-success");
   // 状态
-  $("#stepper").kendoStepper({
+  $("#stepper",$el).kendoStepper({
     steps: [{
       label: "新建",
       icon: "home"
