--- a/src/demo/window.html
+++ b/src/demo/window.html
@@ -110,12 +110,12 @@
       $(".k-detail-row .k-i-reload").click();
     });
     clearInfo()
-    $("#dialog").data("kendoWindow").close();
+    $(".dialog").data("kendoWindow").close();
   }
 
   function cancel_window(){
     clearInfo()
-    $("#dialog").data("kendoWindow").close();
+    $(".dialog").data("kendoWindow").close();
   }
 
   function clearInfo() {
