--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -91,7 +91,10 @@
               { text: "English", attr: { lang: 'en-CA' }, select: function (e) { changeLang(e.target.context.innerHTML) } },
               { text: "日本語", attr: { lang: 'ja-JP' }, select: function (e) { changeLang(e.target.context.innerHTML) } }
             ]
-          }
+          },
+          {
+            text: "", spriteCssClass: 'fa fa-sign-out'
+          },
         ],
 
       })
