选择货位抽离

--- a/src/demo/theme.html
+++ b/src/demo/theme.html
@@ -1,6 +1,7 @@
 <div id="s-l-themes"></div>
 
 <script type="text/javascript">
+$(function(){
   var allColorThemes = {
     sassThemes: [
       { value: "../../styles/kendo.default-v2.min.css", name: "Default v2", colors: ["#ff6358", "#eb5b51", "#fff"] },
@@ -53,5 +54,5 @@
     }
     $("#changeThemeWindow").data("kendoWindow").close();
   })
-
+})
 </script>
