--- a/src/demo/tilelayout.html
+++ b/src/demo/tilelayout.html
@@ -22,6 +22,7 @@
 </div>
 
 <script>
+$(function(){
   var data1 = [
     { cargo: 'A17222', materil: 'RTOK276', cc: 'JESC', dd: '20', weight: '8000KG', ee: '80%', ff: 'red', status: ['red', 'yellow', 'orange', 'blue', 'green'], bg: 'pink' },
     { cargo: 'A18', materil: 'RTOK276', cc: 'JESC', dd: '20', weight: '8000KG', ee: '80%', ff: 'blue', bg: 'pink' },
@@ -117,5 +118,5 @@
       columns: 4
     });
   }
-
+})
 </script>
