--- a/src/demo/window/index.html
+++ b/src/demo/window/index.html
@@ -1,7 +1,7 @@
-<div id="window-xgy" class="window-xgy"></div>
+<div id="window-choose-location" class="window-choose-location"></div>
 <script>
   $(function(){
-    var $window = $("#window-xgy");
+    var $window = $("#window-choose-location");
     $window.attr('id', '');
     $window.kendoGrid({
       toolbar: [
