--- a/src/demo/frozen.html
+++ b/src/demo/frozen.html
@@ -2,6 +2,7 @@
   <div id="frozen-grid"></div>
 </div>
 <script type="text/javascript">
+$(function(){
   $("#frozen-grid").kendoGrid({
     dataSource: {
       data: [{
@@ -85,4 +86,5 @@
     tabsElements.append('<span data-type="remove" class="k-link"><span class="k-icon k-i-x"></span></span>');
     tabStrip.activateTab(tabsElements)
   })
+})
 </script>
