--- a/src/demo/gridLink.html
+++ b/src/demo/gridLink.html
@@ -5,6 +5,7 @@
 </div>
 
 <script type="text/javascript">
+$(function(){
   var orders = [{
       OrderID : 10248,
       CustomerID : "VINET",
@@ -117,4 +118,5 @@
       }
     ]
   })
+})
 </script>
