--- a/src/demo/swichWarehouse.html
+++ b/src/demo/swichWarehouse.html
@@ -14,6 +14,7 @@
 </div>
 
 <script type="text/javascript">
+$(function(){
   $(".warehouse").kendoDropDownList({
     dataTextField: "text",
     dataValueField: "value",
@@ -39,4 +40,5 @@
     $("#changeThemeWindow").data("kendoWindow").close();
     window.location.reload()
   })
+})
 </script>
