--- a/src/demo/plan.html
+++ b/src/demo/plan.html
@@ -15,6 +15,7 @@
     </li>
   </ul>
   <div class="dialog"></div>
+  <div class="choose-user"></div>
   <div class="oper-btn">
     <button title="保存"><i class="fa fa-save"></i>保存</button>
     <button title="关闭"><i class="fa fa-close"></i>关闭</button>
@@ -22,6 +23,12 @@
     <button title="刷新"><i class="fa fa-refresh"></i>刷新</button>
   </div>
 </div>
+<!-- <script type="text/x-kendo-template" class="dialog-choose-user">
+  <label for="user-optional" style="width: 270px;display: inline-block;">Employees</label>
+  <label for="user-selected">Developers</label>
+  <select id="user-optional"></select>
+  <select id="user-selected"></select>
+</script> -->
 <script type="text/javascript">
   $(function(){
     var $el = $('#plan');
@@ -707,6 +714,62 @@
         $(".info-grid", $el).data("kendoGrid").expandRow($(".info-grid tr.k-master-row", $el));
         trExpand = true
       }
+    })
+
+    // 多选人弹出框
+    var modalLen = $('.choose-user').length;
+    var $chooseUser = $('.choose-user', $el)
+    $chooseUser.kendoDialog({
+      width: "540px",
+      height: "455px",
+      title: "选人",
+      closable: true,
+      content: `<div>
+        <label for="user-optional-${modalLen}" style="width: 270px;display: inline-block;">Employees</label>
+        <label for="user-selected-${modalLen}">Developers</label>
+        <select id="user-optional-${modalLen}"></select>
+        <select id="user-selected-${modalLen}"></select>
+      </div>`,
+      actions: [
+        { text: 'Close' },
+        {
+          text: 'OK',
+          primary: true,
+          action: function (e) {
+            var data = $("#user-selected-"+modalLen).data('kendoListBox').dataSource._data
+            var html = ''
+            data.forEach(item => {
+              html += item.value + ','
+            })
+            exampleform.data("kendoForm")._model.select_people = data
+            $('#select_people', $el).val(html)
+          }
+        }
+      ]
+    }).data('kendoDialog')
+
+    $("#user-optional-"+modalLen).kendoListBox({
+      dataTextField: "value",
+      dataValueField: "key",
+      dataSource: [
+        { key: 1, value: 'A' },
+        { key: 2, value: 'B' },
+        { key: 3, value: 'C' }
+      ],
+      connectWith: "user-selected-"+modalLen,
+      toolbar: {
+        position: "right",
+        tools: ["moveUp", "moveDown", "transferTo", "transferFrom", "transferAllTo", "transferAllFrom", "remove"]
+      }
+    });
+
+    $("#user-selected-"+modalLen).kendoListBox({
+      dataTextField: "value",
+      dataValueField: "key",
+    });
+    $('div[data-container-for="select_people"]>span', $el).append('<span class="fa fa-user"></span>')
+    $('div[data-container-for="select_people"]', $el).click(function () {
+      $chooseUser.data("kendoDialog").open();
     })
 
   })
